--- a/web/src/App.css
+++ b/web/src/App.css
@@ -1,17 +1,17 @@
 * { margin: 0; padding: 0; box-sizing: border-box; }
       body { font: 13px Helvetica, Arial; }
-      form { background: #000; 
+      #form { background: #000; 
             padding: 3px; 
             position: fixed; 
             bottom: 0; 
             width: 100%; 
       }
-      form input { border: 0; 
+      #form input { border: 0; 
             padding: 10px; 
             width: 90%; 
             margin-right: 0.5%; 
       }
-      form button { width: 9%; 
+      #form button { width: 9%; 
             background: rgb(130, 224, 255); 
             border: none; 
             padding: 10px; 
@@ -22,3 +22,11 @@
       }
       #messages li { padding: 5px 10px; }
       .other { background: #eee; }
+      .inputs{
+            display: flex;
+            background-color: aqua;
+            height:100vh;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+      }
